@@ -37,14 +37,15 @@ func TestBeatConfig(t *testing.T) {
 		},
 		{
 			conf: map[string]interface{}{
-				"host":                  "localhost:3000",
-				"max_unzipped_size":     64,
-				"max_header_size":       8,
-				"read_timeout":          3 * time.Second,
-				"write_timeout":         4 * time.Second,
-				"shutdown_timeout":      9 * time.Second,
-				"capture_personal_data": true,
-				"secret_token":          "1234random",
+				"host":                   "localhost:3000",
+				"max_unzipped_size":      64,
+				"max_request_queue_time": 9 * time.Second,
+				"max_header_size":        8,
+				"read_timeout":           3 * time.Second,
+				"write_timeout":          4 * time.Second,
+				"shutdown_timeout":       9 * time.Second,
+				"capture_personal_data":  true,
+				"secret_token":           "1234random",
 				"ssl": map[string]interface{}{
 					"enabled":     true,
 					"key":         "1234key",
@@ -70,15 +71,16 @@ func TestBeatConfig(t *testing.T) {
 				},
 			},
 			beaterConf: &Config{
-				Host:            "localhost:3000",
-				MaxUnzippedSize: 64,
-				MaxHeaderSize:   8,
-				ReadTimeout:     3000000000,
-				WriteTimeout:    4000000000,
-				ShutdownTimeout: 9000000000,
-				SecretToken:     "1234random",
-				SSL:             &SSLConfig{Enabled: &truthy, PrivateKey: "1234key", Cert: "1234cert"},
-				AugmentEnabled:  true,
+				Host:                "localhost:3000",
+				MaxUnzippedSize:     64,
+				MaxRequestQueueTime: 9 * time.Second,
+				MaxHeaderSize:       8,
+				ReadTimeout:         3000000000,
+				WriteTimeout:        4000000000,
+				ShutdownTimeout:     9000000000,
+				SecretToken:         "1234random",
+				SSL:                 &SSLConfig{Enabled: &truthy, PrivateKey: "1234key", Cert: "1234cert"},
+				AugmentEnabled:      true,
 				Expvar: &ExpvarConfig{
 					Enabled: &truthy,
 					Url:     "/debug/vars",
@@ -121,15 +123,16 @@ func TestBeatConfig(t *testing.T) {
 				},
 			},
 			beaterConf: &Config{
-				Host:            "localhost:3000",
-				MaxUnzippedSize: 64,
-				MaxHeaderSize:   1048576,
-				ReadTimeout:     2000000000,
-				WriteTimeout:    2000000000,
-				ShutdownTimeout: 5000000000,
-				SecretToken:     "1234random",
-				SSL:             &SSLConfig{Enabled: &truthy, PrivateKey: "", Cert: ""},
-				AugmentEnabled:  true,
+				Host:                "localhost:3000",
+				MaxUnzippedSize:     64,
+				MaxRequestQueueTime: 2 * time.Second,
+				MaxHeaderSize:       1048576,
+				ReadTimeout:         2000000000,
+				WriteTimeout:        2000000000,
+				ShutdownTimeout:     5000000000,
+				SecretToken:         "1234random",
+				SSL:                 &SSLConfig{Enabled: &truthy, PrivateKey: "", Cert: ""},
+				AugmentEnabled:      true,
 				Expvar: &ExpvarConfig{
 					Enabled: &truthy,
 					Url:     "/debug/vars",
@@ -148,7 +151,7 @@ func TestBeatConfig(t *testing.T) {
 					ExcludeFromGrouping: "^/webpack",
 					beatVersion:         "6.2.0",
 				},
-				ConcurrentRequests: 40,
+				ConcurrentRequests: 5,
 			},
 			msg: "Given config merged with default",
 		},
